# nrtools

./: README.md  pyproject.toml  setup.py
misc/: eob_orbits_check.py  extr2infty.py  teob_check_dynamics.py  test_ffi.py  test_kickv.py  test_wvf.py  testing.py  testing.py~  testing_m0_prec.py
misc/CoMdrift_correction/: CoM_2_CoRe.py  CoMcorrect.py  check_COMdrift.py
misc/CoMdrift_correction/SLy_BH_m4.8_s0.6--NS_m1.6_s0--d50_CoM/: Rh_l2_m-1_rInf.txt  Rh_l2_m-2_rInf.txt  Rh_l2_m0_rInf.txt  Rh_l2_m1_rInf.txt  Rh_l2_m2_rInf.txt  Rh_l3_m-1_rInf.txt  Rh_l3_m-2_rInf.txt  Rh_l3_m-3_rInf.txt  Rh_l3_m0_rInf.txt  Rh_l3_m1_rInf.txt  Rh_l3_m2_rInf.txt  Rh_l3_m3_rInf.txt  Rh_l4_m-1_rInf.txt  Rh_l4_m-2_rInf.txt  Rh_l4_m-3_rInf.txt  Rh_l4_m-4_rInf.txt  Rh_l4_m0_rInf.txt  Rh_l4_m1_rInf.txt  Rh_l4_m2_rInf.txt  Rh_l4_m3_rInf.txt  Rh_l4_m4_rInf.txt
misc/EccRed/: EccRed_noForceBal_ddot.py  check_ecc.py  denoise.py
nrtools/: __init__.py
nrtools/evolution/: __init__.py  ev_output.py  ev_parfile.py  evolution.py  parfile.py
nrtools/initialdata/: __init__.py  initialdata.py  metadata.py  output.py  parfile.py
nrtools/utils/: __init__.py  utils.py
tutorials/: produce_initialdata.ipynb
